# LH25_jetflav

./: README.md
create_graphs/: README.md  makeLundJSONDGL.py  reweighting.py
create_jsons/: CMakeLists.txt  LundNetjsons.cpp  README.md  helpers.cpp  helpers.h  merge_jsons.sh
training/: LundNet.py  README.md  config.yaml  lundhelpers.py  multilund.py  plotroc.py
